MacViews: Reattach children of native windows when they are exposed.

Since NSWindow's childWindow breaks when windows are ordered out (except
via -[NSApp hide] it seems), we detach child windows in all cases where
a Widget becomes hidden. Currently they're only re-attached for
NSWindows backed by views::Widget.

To fix, watch for the parent window being exposed, and update
relationships accordingly. This is done implicitly, by making the child
Widget visible again, if it wants to be.

BUG=659161

Review-Url: https://codereview.chromium.org/2448243003
Cr-Commit-Position: refs/heads/master@{#428002}

Former-commit-id: 6c06b0559798ae1120beb416075cffb88ea92874